# VALIDFISH

./: Analysis.cpp  Bounds.cpp  CMakeLists.txt  DetectionSubmodel.cpp  DiscriminationSubmodel.cpp  Energetics.cpp  EnvironmentInhabitant.cpp  Forager.cpp  Forager.h  ForagerGetters.cpp  Geometry.cpp  ManeuverInterpolation.cpp  ManeuverInterpolation.h  Optimizer.cpp  Optimizer.h  PreyCategory.cpp  PreyCategory.h  PreyType.cpp  PreyType.h  Printing.cpp  Swimmer.cpp  Swimmer.h  Wolf.cpp  Wolf.h  main.cpp  python_bindings.cpp  to-do.md  utility.cpp  utility.h
lib/: ExecutionTimer.h  flat_hash_map.hpp  gsl_function_pp.h
lib/fast-cpp-csv-parser/: csv.h
